tests/expectations/compiler/futures/future_parameter_fail.out
Error [ETYC0372116]: Futures may only appear as parameters to async functions.
    --> compiler-test:3:20
     |
   3 |     async fn first(x: Future) -> Future {
     |                    ^^^^^^^^^
Error [ETYC0372116]: Futures may only appear as parameters to async functions.
    --> compiler-test:7:15
     |
   7 |     fn second(x: Future) -> u8 {
     |               ^^^^^^^^^
Error [ETYC0372116]: Futures may only appear as parameters to async functions.
    --> compiler-test:12:10
     |
  12 | fn third(x: Future) -> u8 {
     |          ^^^^^^^^^
